--- a/1.0 Stable/index.html
+++ b/1.0 Stable/index.html
@@ -4,6 +4,6 @@
 <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4.3.2/css/metro-all.min.css">
 </head>
 <body>
-
+  <h1 align="center">Welcome</h1>
 </body>
 </html>
