--- a/1.0 Stable/index.html
+++ b/1.0 Stable/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
   <h1 align="center">Welcome</h1>
+  <hr>
+  <div align="center">
+    <h2>Places</h2>
+    <h1><a href="site1.html">Site 1</a></h1>
+  </div>
 </body>
 </html>
